@@ -12,7 +12,7 @@ import java.util.List;
  * <li>(JDK8 及以后)-XX:MetaspaceSize=10m -XX:MaxMetaspaceSize=10m</li>
  * </ul>
  * <p>
- * Linux Test Cli: java -verbose:gc -XX:PermSize=10m -XX:MaxPermSize=10m -cp target/javacore-jvm-1.0.1.jar io.github.dunwu.javacore.jvm.memory.ConstantPoolOutOfMemoryDemo
+ * Linux Test Cli: nohup java -verbose:gc -XX:MetaspaceSize=10m -XX:MaxMetaspaceSize=10m -XX:+HeapDumpOnOutOfMemoryError -classpath "target/javacore-jvm-1.0.1.jar:target/lib/*" io.github.dunwu.javacore.jvm.memory.ConstantPoolOutOfMemoryDemo >> output.log 2>&1 &
  *
  * @author <a href="mailto:forbreak@163.com">Zhang Peng</a>
  * @since 2019-06-25
